@@ -36,7 +36,7 @@ use Coro::Specific;
 
 use base 'Exporter';
 
-$VERSION = 0.08;
+$VERSION = 0.09;
 @EXPORT = qw(csub result);
 
 {
