@@ -26,7 +26,7 @@ package Coro::Specific;
 
 no warnings;
 
-$VERSION = 0.08;
+$VERSION = 0.09;
 
 =item new
 
