@@ -1,5 +1,9 @@
 Revision history for Perl extension Coro.
 
+	- new function Coro::Event::idle.
+        - the idle process is now overriden
+          by default in Coro::Event.
+
 0.08  Thu Jul 19 06:13:25 CEST 2001
 	- release candidate 2 (new functionality).
 	- add Coro::State::flush function.
